--- a/app/src/main/res/layout/topbar.xml
+++ b/app/src/main/res/layout/topbar.xml
@@ -5,52 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="392dp"
-        android:layout_height="150dp"
-        android:background="#00FFFFFF"
-        android:gravity="center|start"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="52dp"
         android:clickable="true"
         app:backgroundTint="#DBDADA"
+        app:layout_constraintEnd_toStartOf="@+id/title_topbar"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="?attr/homeAsUpIndicator"
-        tools:layout_editor_absoluteY="52dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="?attr/homeAsUpIndicator" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/title_topbar"
         android:layout_width="188dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="28dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
         android:fontFamily="sans-serif"
-        android:text="TextView"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textFontWeight="60"
-        android:textSize="34sp"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/floatingActionButton5"
-        tools:layout_editor_absoluteY="52dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="60dp"
         android:background="#00FFFFFF"
         android:text="Button"
         android:textColor="#EF9B9B"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        tools:layout_editor_absoluteY="50dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/title_topbar"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
